2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02931] use POST in multipart.cgi
	* scripts/multipart/multipart.cgi.in: support POST method

2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02930] Re: fixed w3mmail.cgi
	* scripts/w3mmail.cgi.in (lang_header_default): [=_?] should be encoded
	* scripts/w3mmail.cgi.in (lang_body_default): '=' should be encoded

2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02929] Re: fixed w3mmail.cgi
	* file.c (openPagerBuffer): use content_charset as document_code
	* file.c (getNextPage): code is document_code or DocumentCode

2002-01-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02928] RFC2617: HTTP Digest authentication
	* NEWS: RFC2617: HTTP Digest authentication
	* config.h.dist (USE_DIGEST_AUTH): added
	* configure (use_digest_auth): added, enabled when openssl found
				(because it used openssl/md5.h)
	* file.c (auth_param): added
	* file.c (http_auth): added
	* file.c (extract_auth_val): added
	* file.c (qstr_unquote): added
	* file.c (extract_auth_param): added
	* file.c (get_auth_param): added
	* file.c (AuthBasicCred): added
	* file.c (digest_hex): added
	* file.c (AuthDigestCred): added
	* file.c (basic_auth_param): added
	* file.c (digest_auth_param): added
	* file.c (www_auth): added
	* file.c (findAuthentication): added
	* file.c (getAuthCookie): rewrite, use http_auth
	* file.c (loadGeneralFile): HRequest hr
	* file.c (loadGeneralFile): use findAuthentication, new getAuthCookie
	* proto.h (HTTPrequestMethod): added
	* proto.h (HTTPrequestURI): added
	* proto.h (openURL): add `hr' arg
	* url.c (HTTPrequestMethod): added
	* url.c (HTTPrequestURI): added
	* url.c (HTTPrequest): use HTTPrequestMethod and HTTPrequestURI
	* url.c (openURL): add `hr' arg

2002-01-30  SASAKI Takeshi <sasaki@ct.sakura.ne.jp>

	* [w3m-dev 02927] mailto: POST method with w3mmail.cgi
	* file.c (loadGeneralFile): pass request even if SCM_UNKNOWN 
			(for external URI loader)