@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.30 2002/01/29 19:08:50 ukai Exp $ */
+/* $Id: proto.h,v 1.31 2002/01/30 15:08:48 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -184,6 +184,7 @@ extern void doFileSave(URLFile uf, char *defstr);
 extern int checkCopyFile(char *path1, char *path2);
 extern int checkSaveFile(InputStream stream, char *path);
 extern int checkOverWrite(char *path);
+extern char *inputAnswer(char *prompt);
 extern int matchattr(char *p, char *attr, int len, Str *value);
 extern char *checkHeader(Buffer *buf, char *field);
 extern Buffer *newBuffer(int width);
